kyverno-policies/tests/policies/resources/istio-label-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace-1
  labels:
    istio.io/rev: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace-2
  labels:
    istio.io/rev: "old-version"
